--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 GITHUB_TOKEN=
+POSTGRES_HOST=
+POSTGRES_NAME=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_PORT
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
+AUTH0_DOMAIN=
