--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 asgiref==3.8.1
+Authlib==1.6.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==45.0.3
 Django==5.2.1
+idna==3.10
 psycopg2-binary==2.9.10
+pycparser==2.22
+requests==2.32.3
 sqlparse==0.5.3
+urllib3==2.4.0
