--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,110 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.4
+aiosignal==1.3.2
+aiosqlite==0.21.0
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.9.0
 asgiref==3.8.1
+attrs==25.3.0
 Authlib==1.6.0
+autobahn==24.4.2
+Automat==25.4.16
+banks==2.1.2
+beautifulsoup4==4.13.4
+billiard==4.2.1
 certifi==2025.4.26
 cffi==1.17.1
+channels==4.2.2
+channels_redis==4.2.1
 charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+constantly==23.10.4
 cryptography==45.0.3
+curl_cffi==0.11.1
+daphne==4.2.0
+dataclasses-json==0.6.7
+Deprecated==1.2.18
+dirtyjson==1.0.8
+distro==1.9.0
 Django==5.2.1
+django-datatables-view==1.20.0
+filetype==1.2.0
+frozendict==2.4.6
+frozenlist==1.6.0
+fsspec==2025.5.1
+greenlet==3.2.2
+griffe==1.7.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+kombu==5.5.3
+llama-index-core==0.12.38
+llama-index-llms-openai==0.3.44
+llama-index-tools-yahoo-finance==0.3.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+msgpack==1.1.0
+multidict==6.4.4
+multitasking==0.0.11
+mypy_extensions==1.1.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==2.2.6
+openai==1.82.0
+packaging==25.0
+pandas==2.2.3
+peewee==3.18.1
+pillow==11.2.1
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+propcache==0.3.1
+protobuf==6.31.1
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
+pydantic==2.11.5
+pydantic_core==2.33.2
+pyOpenSSL==25.1.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+redis==6.2.0
+regex==2024.11.6
 requests==2.32.3
+service-identity==24.2.0
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.41
 sqlparse==0.5.3
+tenacity==9.1.2
+tiktoken==0.9.0
+tqdm==4.67.1
+Twisted==24.11.0
+txaio==23.1.1
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.4.0
+vine==5.1.0
+wcwidth==0.2.13
+websockets==15.0.1
+wrapt==1.17.2
+yarl==1.20.0
+yfinance==0.2.61
+zope.interface==7.2
